class Login {
    _id = 0

    constructor(){
        let _id = 0
    }

    setId(id) { _id = id; }
    getId() { return _id; }
}